--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@bytemd/plugin-gemoji": "^1.21.0",
     "@bytemd/plugin-gfm": "^1.21.0",
     "@bytemd/plugin-highlight": "^1.21.0",
+    "@bytemd/plugin-math": "^1.21.0",
     "@bytemd/vue-next": "^1.21.0",
-    "axios": "^1.5.1",
+    "axios": "^1.6.2",
+    "bytemd": "^1.21.0",
     "core-js": "^3.8.3",
+    "highlight.js": "^11.9.0",
     "moment": "^2.29.4",
     "monaco-editor": "^0.44.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
@@ -21,7 +25,7 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
-    "@arco-design/web-vue": "^2.52.0",
+    "@arco-design/web-vue": "^2.53.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
